# 201905884_LAB_SO1_1S2026_PT3

./: .gitignore  CLAUDE.md  Dockerfile.go-client  Dockerfile.go-consumer  Dockerfile.go-server  README.md
.claude/agents/: k8s-project-architect.md  mumnk8s-architect.md  obsidian-second-brain.md
.claude/commands/: docente.md
agents/validator/: check.py  main.py  pyproject.toml  validators.py
deployments/: cheatsheet.md  config.md  deploy.md  gateway.yaml  go-services.yaml  insecure-registry.yaml  kubevirt.yaml  namespaces.yaml  rabbitmq.yaml  rust-api.yaml  setup-guide.md
deployments/file_sh/: kubeVirt.sh  zot-http.sh
docs/: commands.md
go-api-grpc-client/: api-gprc-client.md  go.mod
go-api-grpc-client/internal/: gprc-client.md
go-grpc-server-writer/: go.mod  grpc-server-writer.md
go-rabbit-consumer/: go.mod  go.sum  rabbir-consumer.md
locust/: locust.md  locustfile.py
obsidian/.obsidian/: workspace.json
obsidian/00-Context/: progreso-sesiones.md  proyecto-enunciado.md
obsidian/01-Arquitectura/: arquitectura-general.md  decisiones-tecnicas.md  flujo-de-datos.md
obsidian/02-Servicios/: consumer.md  contratos-grpc.md  dockerfiles.md  esquema-mensajes-rabbitmq.md  gateway-api.md  grpc-client.md  (+5 more)
proto/: go.mod  protobuf.md  warreport.pb.go  warreport.proto  warreport_grpc.pb.go
rust-api/: Cargo.toml  Dockerfile  build.rs  rust-api.md
rust-api/src/: main.rs
rust-api/src/app/: mod.rs
rust-api/src/app/models/: mod.rs  war_data.rs
rust-api/src/app/routes/: mod.rs  war_routes.rs
rust-api/src/app/services/: mod.rs  war_services.rs
(+25 files in other folders)
